# poor_client_stl

./: CMakeLists.txt  README.md  tree.txt  vcpkg.json
config/: config.ini
docunment/client/: library.md  project_design.md  编译时错误.md  配置和运行项目.md
docunment/layout/: cpp_layout.md
docunment/项目配置与运行/: 编译时错误.md
project_docunment/: library.md  project_design.md
protobuf/: CMakeLists.txt  common.proto  server_file.proto  server_gateway.proto  server_logic.proto  server_login.proto
protobuf/src/: common.pb.cc  common.pb.h  server_file.grpc.pb.h  server_gateway.grpc.pb.h  server_logic.grpc.pb.h  server_login.grpc.pb.h
src/: main.cpp
src/common/: connection_pool.cpp  connection_pool.h  local_config.cpp  local_config.h  logger_manager.cpp  logger_manager.h  plugin_interface.h  plugin_manager.cpp  plugin_manager.h
src/file/: file_manager.cpp  file_manager.h
src/gateway/: gateway_manager.cpp  gateway_manager.h  gateway_server.cpp  gateway_server.h
src/login/: login_server.cpp  login_server.h
src/plugins/common/: plugin_interface.h
src/plugins/file/: CMakeLists.txt  file_plugin.cpp  file_plugin.h  file_server.cpp  file_server.h
src/user/: user_manager.cpp  user_manager.h
tools/debug/: copy_config.cmd  cp_plugins.cmd  protoc_make.cmd
